# traitor

./: .gitignore  LICENSE  README.md  pyproject.toml  trait.py
src/: trait.py  traitor.py
tests/: test_trait.py  test_traitor.py
