[project]
name = "traitor"
authors = [{ name = "Derek Veit", email = "derek.veit.d@pm.me" }]
license = "MIT"
readme = "README.md"
description = "Imitation of Rust's trait and impl"
dependencies = [
  "zope.interface",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
