[project]
name = "traitor"
authors = [{ name = "Derek Veit", email = "derek.veit.d@pm.me" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Imitation of Rust's trait and impl"
dependencies = [
  "zope.interface",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
